--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,7 +13,20 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    services:
+          # Label used to access the service container
+          redis:
+            # Docker Hub image
+            image: redis
+            #
+            ports:
+              # Opens tcp port 6379 on the host and service container
+              - 6379:6379
+          zookeeper:
+            image:zookeeper
+            ports:
+              - 2181:2181
+            
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
